[tool.poetry]
name = "pubmed-paper-fetcher-chandana"
version = "0.1.4"
description = "A professional CLI tool to fetch and filter PubMed research papers with pharmaceutical or biotech company authors, supporting advanced queries and CSV export."
authors = ["Chandana Rama <b20ai024@kitsw.ac.in>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chandana0511/pubmed-paper-fetcher"
repository = "https://github.com/chandana0511/pubmed-paper-fetcher"
keywords = ["pubmed", "pharma", "biotech", "cli", "research", "papers", "fetcher"]
packages = [
    { include = "pubmed_paper_fetcher" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = ">=0.16.0,<0.17.0"
requests = ">=2.32.4,<3.0.0"
pandas = ">=2.3.1,<3.0.0"
lxml = ">=6.0.0,<7.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
